lang/macro/tests/ui/fail/45-no-receiver-in-interface.rs
use liquid_lang as liquid;

#[liquid::interface(name = auto)]
mod foo {
    extern "liquid" {
        fn bar() -> u8;
    }
}

fn main() {}
